[package]
name = "midas"
version = "0.1.0"
authors = ["Hiroaki Yamamoto <hiroaki@hysoftware.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["logger"]

[dependencies]
binance = "0.10.2"
slog = "2.5.2"
logger = {path = "./logger"}

[[bin]]
name = "watcher"
path = "./src/watcher/main.rs"
