[profile.release]
opt-level = 2
lto = true
strip = true

[workspace]
resolver = "2"
members = [
  "libs/exchanges/clients",
  "libs/exchanges/executors",
  "libs/exchanges/history",
  "libs/exchanges/notification",
  "libs/exchanges/observers",
  "libs/exchanges/sign",
  "libs/exchanges/symbols",
  # "libs/exchanges/*",
  "libs/*",
  "services/*",
  "workers/*",
]
exclude = ["libs/exchanges", "services/transpiler"]
