[package]
name = "access_logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.131"
log = { version = "0.4", features = [ "kv_unstable", "kv_unstable_serde" ] }
warp = "0.3.7"
