[package]
name = "bot"
version = "0.1.0"
authors = ["Hiroaki Yamamoto <hiroaki@hysoftware.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpc = { path = "../rpc" }
errors = { path = "../errors" }
types = { path = "../types" }
random = { path = "../random" }

serde = { version = "1.0.196", features = ["derive"] }
mongodb = { version = "2.8.1", default-features = false, features = [
  "async-std-runtime",
  "bson-chrono-0_4",
] }
reqwest = { version = "0.11.24", features = [
  "gzip",
  "brotli",
  "json",
  "rustls-tls",
  "cookies",
] }
err-derive = "0.3.1"
rug = { version = "1.24.0", features = ["serde"] }
gmp-mpfr-sys = { version = "1.6.2", features = ["force-cross"] }
async-trait = "0.1.77"
futures = "0.3.30"
log = { version = "0.4", features = ["kv_unstable", "kv_unstable_serde"] }
