[package]
name = "bot"
version = "0.1.0"
authors = ["Hiroaki Yamamoto <hiroaki@hysoftware.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpc = { path = "../rpc" }
errors = { path = "../errors" }
types = { path = "../types" }
random = { path = "../random" }

bson = { version = "2.11.0", features = ["chrono-0_4"] }
serde = { version = "1.0.204", features = ["derive"] }
mongodb = "3.0.1"
reqwest = { version = "0.12.5", features = [
  "gzip",
  "brotli",
  "json",
  "rustls-tls",
  "cookies",
] }
err-derive = "0.3.1"
rug = { version = "1.25.0", features = ["serde"] }
gmp-mpfr-sys = { version = "1.6.4", features = ["force-cross"] }
async-trait = "0.1.81"
futures = "0.3.30"
log = { version = "0.4", features = ["kv_unstable", "kv_unstable_serde"] }
