[package]
name = "bot"
version = "0.1.0"
authors = ["Hiroaki Yamamoto <hiroaki@hysoftware.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpc = { path = "../rpc" }
errors = { path = "../errors" }
types = { path = "../types" }
random = { path = "../random" }

bson = { version = "2.13.0", features = ["chrono-0_4"] }
serde = { version = "1.0.216", features = ["derive"] }
mongodb = "3.1.1"
reqwest = { version = "0.12.9", features = [
  "gzip",
  "brotli",
  "json",
  "rustls-tls",
  "cookies",
] }
rug = { version = "1.26.1", features = ["serde"] }
gmp-mpfr-sys = { version = "1.6.4", features = ["force-cross"] }
async-trait = "0.1.83"
futures = "0.3.31"
log = { version = "0.4", features = ["kv_unstable", "kv_unstable_serde"] }
thiserror = "2.0.9"
