[package]
name = "clients"
version = "0.1.0"
authors = ["Hiroaki Yamamoto <hiroaki@hysoftware.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
types = { path = "../types" }
errors = { path = "../errors" }
keychain = { path = "../keychain" }
rpc = { path = "../rpc" }

reqwest = "0.11.23"
mongodb = { version = "2.8.0", default-features = false, features = [
  "async-std-runtime",
] }
async-trait = "0.1.77"
