[package]
name = "config"
version = "0.1.0"
authors = ["Hiroaki Yamamoto <svc+midas@hysoftware.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subscribe = { path = "../subscribe" }

log = { version = "0.4", features = ["kv_unstable", "kv_unstable_serde"] }
errors = { path = "../errors" }
kvs = { path = "../kvs" }

mongodb = { version = "2.8.1", default-features = false, features = [
  "async-std-runtime",
] }
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.31"
clap = { version = "4.5.1", features = ["derive"] }
reqwest = { version = "0.11.24", features = [
  "gzip",
  "brotli",
  "json",
  "rustls-tls",
] }
redis = { version = "0.25.0", features = ["connection-manager", "tokio-comp"] }
tokio = { version = "1.36.0", features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "signal",
  "time",
] }
libc = "0.2.153"
structured-logger = "1.0.3"
