[package]
name = "config"
version = "0.1.0"
authors = ["Hiroaki Yamamoto <svc+midas@hysoftware.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subscribe = { path = "../subscribe" }

log = { version = "0.4", features = ["kv_unstable", "kv_unstable_serde"] }
errors = { path = "../errors" }
kvs = { path = "../kvs" }

mongodb = "3.1.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_yaml = "0.9.34+deprecated"
clap = { version = "4.5.16", features = ["derive"] }
reqwest = { version = "0.12.7", features = [
  "gzip",
  "brotli",
  "json",
  "rustls-tls",
] }
redis = { version = "0.26.1", features = ["connection-manager", "tokio-comp"] }
tokio = { version = "1.40.0", features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "signal",
  "time",
] }
libc = "0.2.154"
structured-logger = "1.0.3"
