[package]
name = "csrf"
version = "0.1.0"
authors = ["Hiroaki Yamamoto <hiroaki@hysoftware.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
random = { path = "../random" }

cookie = "0.18.0"
hyper = "1.1.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"

warp = "0.3.6"
