[package]
name = "dlock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
errors = { path = "../errors" }
kvs = { path = "../kvs" }

async-trait = "0.1.73"
tokio = { version = "1.30.0", features = [
  "macros",
  "rt-multi-thread",
  "time",
  "sync",
] }
futures = "0.3.28"
rand = "0.8.5"
