[package]
name = "entities"
version = "0.1.0"
authors = ["Hiroaki Yamamoto <hiroaki@hysoftware.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpc = { path = "../rpc" }
types = { path = "../types" }
errors = { path = "../errors" }

futures-core = "0.3.30"
num-traits = "0.2.18"
serde = { version = "1.0.197", features = ["derive"] }
bson = "2.9.0"
bytes = "1.6.0"
ring = "0.17.8"
mongodb = { version = "2.8.2", default-features = false, features = [
  "async-std-runtime",
  "bson-chrono-0_4",
] }
chrono = { version = "0.4.37", features = ["serde"] }
rug = { version = "1.24.1", features = ["serde"] }
gmp-mpfr-sys = { version = "1.6.2", features = ["force-cross"] }
