[package]
name = "entities"
version = "0.1.0"
authors = ["Hiroaki Yamamoto <hiroaki@hysoftware.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpc = { path = "../rpc" }
types = { path = "../types" }
errors = { path = "../errors" }

futures-core = "0.3.30"
num-traits = "0.2.19"
serde = { version = "1.0.205", features = ["derive"] }
bson = "2.11.0"
bytes = "1.6.0"
ring = "0.17.8"
mongodb = "3.0.1"
chrono = { version = "0.4.38", features = ["serde"] }
rug = { version = "1.25.0", features = ["serde"] }
gmp-mpfr-sys = { version = "1.6.4", features = ["force-cross"] }
