[package]
name = "entities"
version = "0.1.0"
authors = ["Hiroaki Yamamoto <hiroaki@hysoftware.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpc = { path = "../rpc" }
types = { path = "../types" }
errors = { path = "../errors" }

futures-core = "0.3.31"
num-traits = "0.2.19"
serde = { version = "1.0.216", features = ["derive"] }
bson = "2.13.0"
bytes = "1.6.0"
ring = "0.17.8"
mongodb = "3.1.1"
chrono = { version = "0.4.39", features = ["serde"] }
rug = { version = "1.26.1", features = ["serde"] }
gmp-mpfr-sys = { version = "1.6.4", features = ["force-cross"] }
