[package]
name = "errors"
version = "0.1.0"
authors = ["Hiroaki Yamamoto <hiroaki@hysoftware.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
err-derive = "0.3.1"
serde = { version = "1.0.203", features = ["derive"] }
log = { version = "0.4", features = ["kv_unstable", "kv_unstable_serde"] }
url = "2.5.0"
warp = { version = "0.3.7", features = ["tls"] }
reqwest = { version = "0.12.4", features = [
  "gzip",
  "brotli",
  "json",
  "rustls-tls",
] }
mongodb = { version = "2.8.2", default-features = false, features = [
  "async-std-runtime",
  "bson-chrono-0_4",
] }
serde_qs = "0.13.0"
serde_json = "1.0.117"
serde_yaml = "0.9.34+deprecated"
redis = "0.25.3"
async-nats = "0.35.1"
rmp-serde = "1.3.0"
tokio-tungstenite = "0.21.0"
tokio = { version = "1.37.0", features = ["sync"] }
rug = { version = "1.24.1", features = ["serde"] }
