[package]
name = "errors"
version = "0.1.0"
authors = ["Hiroaki Yamamoto <hiroaki@hysoftware.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
err-derive = "0.3.1"
serde = { version = "1.0.204", features = ["derive"] }
log = { version = "0.4", features = ["kv_unstable", "kv_unstable_serde"] }
url = "2.5.2"
warp = { version = "0.3.7", features = ["tls"] }
reqwest = { version = "0.12.5", features = [
  "gzip",
  "brotli",
  "json",
  "rustls-tls",
] }
mongodb = "3.0.1"
serde_qs = "0.13.0"
serde_json = "1.0.122"
serde_yaml = "0.9.34+deprecated"
redis = "0.26.1"
async-nats = "0.35.1"
rmp-serde = "1.3.0"
tokio-tungstenite = "0.23.1"
tokio = { version = "1.39.2", features = ["sync"] }
rug = { version = "1.25.0", features = ["serde"] }
