[package]
name = "errors"
version = "0.1.0"
authors = ["Hiroaki Yamamoto <hiroaki@hysoftware.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "2.0.9"
serde = { version = "1.0.217", features = ["derive"] }
log = { version = "0.4", features = ["kv_unstable", "kv_unstable_serde"] }
url = "2.5.3"
warp = { version = "0.3.7", features = ["tls"] }
reqwest = { version = "0.12.11", features = [
  "gzip",
  "brotli",
  "json",
  "rustls-tls",
] }
mongodb = "3.1.1"
serde_qs = "0.13.0"
serde_json = "1.0.134"
serde_yaml = "0.9.34+deprecated"
redis = "0.27.0"
async-nats = "0.38.0"
rmp-serde = "1.3.0"
tokio-tungstenite = "0.26.1"
tokio = { version = "1.42.0", features = ["sync"] }
rug = { version = "1.26.1", features = ["serde"] }
