[package]
name = "exchanges"
version = "0.1.0"
authors = ["Hiroaki Yamamoto <hiroaki@hysoftware.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.10.8", features = ["json", "gzip", "brotli"]}
tokio = {version = "0.2.22", features = [
  "sync", "rt-threaded", "macros", "blocking", "stream", "time", "tcp"
]}
rpc = { path = "../rpc" }
config = { path = "../config" }
async-trait = "0.1.41"
types = { path = "../types" }
chrono = "0.4.19"
url = "2.1.1"
serde_qs = "0.7.0"
serde = "1.0.116"
serde_json = "1.0.58"
slog = "2.5.2"
mongodb = "1.1.1"
futures = "0.3.5"
nats = "0.8.0"
rmp-serde = "0.14.4"
num_cpus = "1.13.0"
rand = "0.7.3"
tokio-tungstenite = "0.11.0"
http = "0.2.1"
async-stream = "0.3.0"
tonic = "0.3.1"
