[package]
name = "exchanges"
version = "0.1.0"
authors = ["Hiroaki Yamamoto <hiroaki@hysoftware.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.10.9", features = ["json", "gzip", "brotli"]}
tokio = {version = "0.2.23", features = [
  "rt-threaded",
  "sync", "macros", "stream", "time", "net"
]}
rpc = { path = "../rpc" }
config = { path = "../config" }
async-trait = "0.1.42"
types = { path = "../types" }
chrono = "0.4.19"
url = "2.2.0"
serde_qs = "0.7.0"
serde = "1.0.118"
serde_json = "1.0.60"
slog = "2.7.0"
mongodb = "1.1.1"
futures = "0.3.8"
nats = "0.8.6"
rmp-serde = "0.14.4"
num_cpus = "1.13.0"
rand = "0.7.3"
tokio-tungstenite = { version = "0.11.0", features = ["tls"] }
http = "0.2.1"
async-stream = "0.3.0"
tonic = "0.3.1"
clap = "3.0.0-beta.2"
tokio-native-tls = "0.1"
num = "0.3.1"
