[package]
name = "executors"
version = "0.1.0"
authors = ["Hiroaki Yamamoto <hiroaki@hysoftware.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
types = { path = "../types" }
errors = { path = "../errors" }
rpc = { path = "../rpc" }
keychain = { path = "../keychain" }
round_robin_client = { path = "../round_robin_client" }
subscribe = { path = "../subscribe" }
clients = { path = "../clients" }
history = { path = "../history" }
observers = { path = "../observers" }
entities = { path = "../entities" }
writers = { path = "../writers" }

async-stream = "0.3.5"
async-trait = "0.1.74"
futures = "0.3.29"
mongodb = { version = "2.8.0", default-features = false, features = [
  "async-std-runtime",
] }
log = { version = "0.4", features = ["kv_unstable", "kv_unstable_serde"] }
ring = "0.17.7"
serde = { version = "1.0.193", features = ["derive"] }
reqwest = { version = "0.11.22", features = [
  "gzip",
  "brotli",
  "json",
  "rustls-tls",
] }
serde_qs = "0.12.0"
err-derive = "0.3.1"
tokio = { version = "1.35.0", features = ["sync"] }
rug = { version = "1.22.0", features = ["serde"] }
gmp-mpfr-sys = { version = "1.6.1", features = ["force-cross"] }
