[package]
name = "executors"
version = "0.1.0"
authors = ["Hiroaki Yamamoto <hiroaki@hysoftware.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
types = { path = "../types" }
errors = { path = "../errors" }
rpc = { path = "../rpc" }
keychain = { path = "../keychain" }
round_robin_client = { path = "../round_robin_client" }
subscribe = { path = "../subscribe" }
clients = { path = "../clients" }
history = { path = "../history" }
observers = { path = "../observers" }
entities = { path = "../entities" }
writers = { path = "../writers" }
position = { path = "../position" }

async-stream = "0.3.5"
async-trait = "0.1.80"
futures = "0.3.30"
mongodb = { version = "2.8.2", default-features = false, features = [
  "async-std-runtime",
] }
log = { version = "0.4", features = ["kv_unstable", "kv_unstable_serde"] }
ring = "0.17.8"
serde = { version = "1.0.198", features = ["derive", "rc"] }
reqwest = { version = "0.12.4", features = [
  "gzip",
  "brotli",
  "json",
  "rustls-tls",
] }
serde_qs = "0.13.0"
err-derive = "0.3.1"
tokio = { version = "1.37.0", features = ["sync", "time"] }
rug = { version = "1.24.1", features = ["serde"] }
gmp-mpfr-sys = { version = "1.6.2", features = ["force-cross"] }
url = "2.5.0"
