[package]
name = "executors"
version = "0.1.0"
authors = ["Hiroaki Yamamoto <hiroaki@hysoftware.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
types = { path = "../types" }
errors = { path = "../errors" }
rpc = { path = "../rpc" }
keychain = { path = "../keychain" }
round_robin_client = { path = "../round_robin_client" }
subscribe = { path = "../subscribe" }
clients = { path = "../clients" }
history = { path = "../history" }
observers = { path = "../observers" }
entities = { path = "../entities" }
writers = { path = "../writers" }
position = { path = "../position" }

async-stream = "0.3.6"
async-trait = "0.1.83"
futures = "0.3.31"
mongodb = "3.1.0"
log = { version = "0.4", features = ["kv_unstable", "kv_unstable_serde"] }
ring = "0.17.8"
serde = { version = "1.0.215", features = ["derive", "rc"] }
reqwest = { version = "0.12.9", features = [
  "gzip",
  "brotli",
  "json",
  "rustls-tls",
] }
serde_qs = "0.13.0"
err-derive = "0.3.1"
tokio = { version = "1.42.0", features = ["sync", "time"] }
rug = { version = "1.26.1", features = ["serde"] }
gmp-mpfr-sys = { version = "1.6.4", features = ["force-cross"] }
url = "2.5.3"
