[package]
name = "history"
version = "0.1.0"
authors = ["Hiroaki Yamamoto <hiroaki@hysoftware.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
types = { path = "../types" }
errors = { path = "../errors" }
rpc = { path = "../rpc" }
config = { path = "../config" }
subscribe = { path = "../subscribe" }

entities = { path = "../entities" }
writers = { path = "../writers" }

clients = { path = "../clients" }
round_robin_client = { path = "../round_robin_client" }
kvs = { path = "../kvs" }

async-trait = "0.1.77"
futures = "0.3.30"
rand = "0.8.5"
mongodb = { version = "2.8.0", default-features = false, features = [
  "async-std-runtime",
] }
rmp-serde = "1.1.2"
serde_qs = "0.12.0"
url = "2.5.0"
log = { version = "0.4", features = ["kv_unstable", "kv_unstable_serde"] }
tokio = { version = "1.35.1", features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "sync",
  "time",
] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.112"
num_cpus = "1.16.0"
reqwest = { version = "0.11.23", features = [
  "gzip",
  "brotli",
  "json",
  "rustls-tls",
  "cookies",
] }
rug = { version = "1.24.0", features = ["serde"] }
gmp-mpfr-sys = { version = "1.6.2", features = ["force-cross"] }
