[package]
name = "history"
version = "0.1.0"
authors = ["Hiroaki Yamamoto <hiroaki@hysoftware.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
types = { path = "../types" }
errors = { path = "../errors" }
rpc = { path = "../rpc" }
config = { path = "../config" }
subscribe = { path = "../subscribe" }

entities = { path = "../entities" }
writers = { path = "../writers" }

clients = { path = "../clients" }
round_robin_client = { path = "../round_robin_client" }
kvs = { path = "../kvs" }

async-trait = "0.1.83"
futures = "0.3.31"
rand = "0.8.5"
mongodb = "3.1.1"
rmp-serde = "1.3.0"
serde_qs = "0.13.0"
url = "2.5.3"
log = { version = "0.4", features = ["kv_unstable", "kv_unstable_serde"] }
tokio = { version = "1.42.0", features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "sync",
  "time",
] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
num_cpus = "1.16.0"
reqwest = { version = "0.12.9", features = [
  "gzip",
  "brotli",
  "json",
  "rustls-tls",
  "cookies",
] }
rug = { version = "1.26.1", features = ["serde"] }
gmp-mpfr-sys = { version = "1.6.4", features = ["force-cross"] }
