[package]
name = "keychain"
version = "0.1.0"
authors = ["Hiroaki Yamamoto <hiroaki@hysoftware.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
errors = { path = "../errors" }
rpc = { path = "../rpc" }
types = { path = "../types" }
subscribe = { path = "../subscribe" }
writers = { path = "../writers" }

bytes = "1.6.0"
ring = "0.17.8"
futures = "0.3.30"
mongodb = { version = "2.8.2", default-features = false, features = [
  "async-std-runtime",
] }
rmp-serde = "1.3.0"
async-trait = "0.1.80"
serde = { version = "1.0.201", features = ["derive", "rc"] }
serde_qs = "0.13.0"
reqwest = { version = "0.12.4", features = [
  "gzip",
  "brotli",
  "json",
  "rustls-tls",
  "cookies",
] }
