[package]
name = "keychain"
version = "0.1.0"
authors = ["Hiroaki Yamamoto <hiroaki@hysoftware.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
errors = { path = "../errors" }
rpc = { path = "../rpc" }
types = { path = "../types" }
subscribe = { path = "../subscribe" }
writers = { path = "../writers" }

bytes = "1.6.0"
ring = "0.17.8"
futures = "0.3.31"
mongodb = "3.1.1"
rmp-serde = "1.3.0"
async-trait = "0.1.83"
serde = { version = "1.0.216", features = ["derive", "rc"] }
serde_qs = "0.13.0"
reqwest = { version = "0.12.11", features = [
  "gzip",
  "brotli",
  "json",
  "rustls-tls",
  "cookies",
] }
