[package]
name = "kvs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
errors = { path = "../errors" }
types = { path = "../types" }
random = { path = "../random" }

redis = { version = "0.25.3", features = ["tokio-comp"] }
serde = "1.0.200"
rmp-serde = "1.2.0"
async-trait = "0.1.80"
tokio = { version = "1.37.0", features = [
  "macros",
  "rt-multi-thread",
  "time",
  "sync",
] }
futures = "0.3.30"
chrono = "0.4.38"
