[package]
name = "nats_msg"
version = "0.1.0"
authors = ["Hiroaki Yamamoto <hiroaki@hysoftware.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
types = { path = "../types" }

nats = "0.8.0"
rmp-serde = "0.14.4"
tokio = {version = "0.2.22", features = ["stream"]}
serde = "1.0.116"
