[package]
name = "notification"
version = "0.1.0"
authors = ["Hiroaki Yamamoto <hiroaki@hysoftware.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
errors = { path = "../errors" }
types = { path = "../types" }
subscribe = { path = "../subscribe" }
round_robin_client = { path = "../round_robin_client" }
clients = { path = "../clients" }
symbols = { path = "../symbols" }
history = { path = "../history" }
executors = { path = "../executors" }
entities = { path = "../entities" }
keychain = { path = "../keychain" }
position = { path = "../position" }

async-trait = "0.1.83"
rmp-serde = "1.3.0"
serde_json = "1.0.132"
log = { version = "0.4", features = ["kv_unstable", "kv_unstable_serde"] }
tokio = { version = "1.40.0", features = ["time", "macros", "sync"] }
tokio-stream = "0.1.16"
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
futures = "0.3.31"
mongodb = "3.1.0"
serde = { version = "1.0.210", features = ["derive"] }
rug = { version = "1.26.1", features = ["serde"] }
gmp-mpfr-sys = { version = "1.6.4", features = ["force-cross"] }
url = "2.5.2"
reqwest = { version = "0.12.8", features = [
  "gzip",
  "brotli",
  "json",
  "rustls-tls",
  "cookies",
] }
