[package]
name = "observers"
version = "0.1.0"
authors = ["Hiroaki Yamamoto <hiroaki@hysoftware.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
errors = { path = "../errors" }
types = { path = "../types" }
rpc = { path = "../rpc" }
subscribe = { path = "../subscribe" }
round_robin_client = { path = "../round_robin_client" }
random = { path = "../random" }
entities = { path = "../entities" }
clients = { path = "../clients" }
symbols = { path = "../symbols" }

async-trait = "0.1.83"
futures = "0.3.31"
mongodb = "3.1.0"
rmp-serde = "1.3.0"
serde_json = "1.0.132"
log = { version = "0.4", features = ["kv_unstable", "kv_unstable_serde"] }
tokio = { version = "1.40.0", features = [
  "macros",
  "time",
  "signal",
  "rt",
  "rt-multi-thread",
] }
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
serde = { version = "1.0.213", features = ["derive"] }
tokio-stream = "0.1.16"
rug = { version = "1.26.1", features = ["serde"] }
gmp-mpfr-sys = { version = "1.6.4", features = ["force-cross"] }

[dev-dependencies]
test_utils = { path = "../test_utils" }
