[package]
name = "position"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpc = { path = "../rpc" }
types = { path = "../types" }
errors = { path = "../errors" }
entities = { path = "../entities" }
writers = { path = "../writers" }

log = { version = "0.4", features = ["kv_unstable", "kv_unstable_serde"] }
serde = { version = "1.0.195", features = ["derive", "rc"] }
rug = { version = "1.22.0", features = ["serde"] }
mongodb = { version = "2.8.0", default-features = false, features = [
  "async-std-runtime",
  "bson-chrono-0_4",
] }
async-trait = "0.1.77"
futures = "0.3.30"
