[package]
name = "position"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpc = { path = "../rpc" }
types = { path = "../types" }
errors = { path = "../errors" }
entities = { path = "../entities" }
writers = { path = "../writers" }

log = { version = "0.4", features = ["kv_unstable", "kv_unstable_serde"] }
serde = { version = "1.0.202", features = ["derive", "rc"] }
rug = { version = "1.24.1", features = ["serde"] }
mongodb = { version = "2.8.2", default-features = false, features = [
  "async-std-runtime",
  "bson-chrono-0_4",
] }
async-trait = "0.1.80"
futures = "0.3.30"
async-stream = "0.3.5"
tokio-stream = "0.1.15"
rand = "0.8.5"
