[package]
name = "round"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
errors = { path = "../errors" }

log = "0.4.17"
reqwest = { version = "0.11.13", features = ["gzip", "brotli", "json", "rustls-tls"]}
serde = "1.0.152"
tokio = { version = "1.26.0", features = ["time"] }
