[package]
name = "round"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
errors = { path = "../errors" }
types = { path = "../types" }

log = { version = "0.4.17", features = ["kv_unstable"] }
reqwest = { version = "0.11.13", features = [
  "gzip",
  "brotli",
  "json",
  "rustls-tls",
] }
serde = "1.0.152"
tokio = { version = "1.26.0", features = ["time", "rt", "sync"] }
tokio-tungstenite = { version = "0.20.0", features = ["native-tls"] }
rand = "0.8.5"
futures = "0.3.28"
serde_json = "1.0.107"
