[package]
name = "round"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
errors = { path = "../errors" }
types = { path = "../types" }

log = { version = "0.4.20", features = ["kv_unstable"] }
reqwest = { version = "0.11.22", features = [
  "gzip",
  "brotli",
  "json",
  "rustls-tls",
] }
serde = "1.0.193"
tokio = { version = "1.34.0", features = [
  "time",
  "rt",
  "rt-multi-thread",
  "sync",
] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
rand = "0.8.5"
futures = "0.3.28"
serde_json = "1.0.108"
