[package]
name = "round_robin_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
errors = { path = "../errors" }
types = { path = "../types" }

log = { version = "0.4.22", features = ["kv_unstable"] }
reqwest = { version = "0.12.7", features = [
  "gzip",
  "brotli",
  "json",
  "rustls-tls",
] }
serde = "1.0.210"
tokio = { version = "1.40.0", features = [
  "time",
  "rt",
  "rt-multi-thread",
  "sync",
] }
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
rand = "0.8.5"
futures = "0.3.30"
serde_json = "1.0.128"
async-trait = "0.1.82"

[dev-dependencies]
test_utils = { path = "../test_utils" }
